--- a/client/src/styles/global/_global.scss
+++ b/client/src/styles/global/_global.scss
@@ -16,6 +16,10 @@ img {
   height: auto;
 }
 
+a {
+	text-decoration: none;
+}
+
 .visually-hidden {
 	position: absolute !important;
 	clip: rect(1px 1px 1px 1px);
